--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="thirdparty/fontawesome/css/all.css" />
     <link rel="stylesheet" href="thirdparty/bulma-extensions/bulma-extensions.css" />
     <link rel="stylesheet" href="thirdparty/animate.css" />
-    <link rel="stylesheet" href="thirdparty/bootstrap/css/bootstrap.min.css" />
 
     <!-- 本项目CSS -->
     <link href="dist/css/main.css" rel="stylesheet" />
@@ -60,47 +59,92 @@
       </div>
     </div>
 
-    <div class="tab-contents">
+    <div class="tab-contents is-flex1">
       <div class="tab-content is-block">
-        <div class="level is-mobile dragable mb-0">
-          <div class="level-left ml-2 titlebar-bkg" width="200">
-            <img class="mr-1" height="24" width="24" src="assets/logo.png" />
-            <section id="accordion2" class="mb-6">
-              <div class="group">
-                <h3 class="button is-primary is-outlined">&nbsp;Section 1： Drag me to sort 【拖拽我 可以排序】</h3>
-                <div>
-                  <p>
-                    Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit amet, nunc. Nam
-                    a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-                  </p>
+        <div class="columns is-gapless is-mobile fullheight">
+          <div class="column is-narrow fullheight bkg-color-playlist" style="width: 325px">
+            <div id="accordionExample" class="accordion accordion-flush m-1">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" aria-controls="collapseOne" data-bs-target="#collapseOne" data-bs-toggle="collapse" type="button" aria-expanded="true">
+                    <strong class="xmp-text-color">播放列表 </strong>
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong class="xmp-text-color">This is the second </strong>
+                  </div>
                 </div>
               </div>
-              <div class="group">
-                <h3 class="button is-primary">&nbsp;Section 2</h3>
-                <section>
-                  <p>
-                    Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit,
-                    faucibus interdum tellus libero ac justo. Vivamus non quam. In suscipit faucibus urna.
-                  </p>
-                </section>
+              <div class="accordion-item mt-1">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button
+                    class="accordion-button collapsed"
+                    aria-controls="collapseTwo"
+                    data-bs-target="#collapseTwo"
+                    data-bs-toggle="collapse"
+                    type="button"
+                    aria-expanded="false"
+                  >
+                    <strong class="xmp-text-color">在线媒体 </strong>
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second </strong>
+                  </div>
+                </div>
               </div>
-            </section>
+              <div class="accordion-item mt-1">
+                <h2 class="accordion-header" id="headingThree">
+                  <button
+                    class="accordion-button collapsed"
+                    aria-controls="collapseThree"
+                    data-bs-target="#collapseThree"
+                    data-bs-toggle="collapse"
+                    type="button"
+                    aria-expanded="false"
+                  >
+                    <strong class="xmp-text-color">娱乐中心 </strong>
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second </strong>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class=""></div>
+          <div class="column is-flex is-justify-content-center1 bkg-color-playlist">
+            <div>
+              <div class="is-align-self-center bkg-color">
+                <p class="title">Small hero</p>
+                <p class="subtitle">vCenter and hCenter</p>
+                <p class="subtitle">vCenter and hCenter</p>
+              </div>
+            </div>
+
+            <div id="id_footer1" class="bui-footer1 is-align-self-flex-end1">
+              <div class="container1">
+                <p class="subtitle1">This column will take up the remaining space available.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="tab-content" title="迅雷的视频网站下线了，所以换成其他网站">
-        <iframe src="https://www.bilibili.com/" frameborder="0" style="width: 100%; height: 100%"></iframe>
+        <!-- <iframe src="https://www.bilibili.com/" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
       </div>
       <div class="tab-content" title="很多视频网站禁止了electron访问，所以换成非视频网站">
-        <iframe src="https://bulma.io/" frameborder="0" style="width: 100%; height: 100%"></iframe>
+        <!-- <iframe src="https://bulma.io/" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
       </div>
       <div class="tab-content" title="很多视频网站禁止了electron访问，所以换成非视频网站">
-        <iframe src="https://www.electronjs.org/zh/" frameborder="0" style="width: 100%; height: 100%"></iframe>
+        <!-- <iframe src="https://www.electronjs.org/zh/" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
       </div>
       <div class="tab-content" title="很多视频网站禁止了electron访问，所以换成非视频网站">
-        <iframe src="https://blog.csdn.net/qq316293804/article/details/14162539" frameborder="0" style="width: 100%; height: 100%"></iframe>
+        <!-- <iframe src="https://blog.csdn.net/qq316293804/article/details/14162539" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
       </div>
     </div>
 
