--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="thirdparty/fontawesome/css/all.css" />
     <link rel="stylesheet" href="thirdparty/bulma-extensions/bulma-extensions.css" />
     <link rel="stylesheet" href="thirdparty/animate.css" />
+    <link rel="stylesheet" href="thirdparty/bootstrap/extensions/bstreeview.css" />
 
     <!-- 本项目CSS -->
     <link href="dist/css/main.css" rel="stylesheet" />
@@ -63,54 +64,85 @@
       <div class="tab-content is-block is-flex-grow-1 is-flex">
         <div class="columns is-gapless is-mobile is-flex-grow-1">
           <div class="column is-narrow bkg-color-playlist" style="width: 325px">
-            <div id="accordionExample" class="accordion accordion-flush m-1">
+            <div class="mr-1" style="height: 30px">
+              <div class="field is-horizontal is-mobile">
+                <span id="btnFont" class="is-small bui-btn-img">
+                  <span class="btn-4img"> </span>
+                </span>
+                <div class="field-body">
+                  <div class="field">
+                    <div class="control has-icons-right">
+                      <input class="input is-small bkg-color-input xmp-gray-text-color" type="text" placeholder="请输入搜索关键词" />
+
+                      <span class="icon is-small is-right has-text-grey">
+                        <i class="fas fa-search pointer-cursor"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div id="accordionExample" class="accordion accordion-flush p-1 scroll">
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                  <button class="accordion-button" aria-controls="collapseOne" data-bs-target="#collapseOne" data-bs-toggle="collapse" type="button" aria-expanded="true">
-                    <strong class="xmp-text-color">播放列表 </strong>
+                <h5 class="accordion-header" id="headingOne">
+                  <button class="accordion-button btn-list" data-bs-target="#collapseOne" data-bs-toggle="collapse" type="button">
+                    <strong class="xmp-gray-text-color has-text-weight-semibold font-normal">播放列表 </strong>
                   </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong class="xmp-text-color">This is the second </strong>
+                </h5>
+                <div id="collapseOne" class="accordion-collapse collapse show">
+                  <div class="accordion-body text-list-item p-2">
+                    <div class="level is-mobile mb-2">
+                      <div class="level-left">
+                        <div class="level-item">
+                          <select class="form-select form-select-sm">
+                            <option selected>本地</option>
+                            <option>在线</option>
+                            <option>全部</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="level-right">
+                        <div class="level-item">
+                          <span id="btnPlayMode" title="播放模式" class="is-small bui-btn-img">
+                            <span class="btn-4img"> </span>
+                          </span>
+                          <span id="btnAdd" class="is-small bui-btn-img">
+                            <span class="btn-4img"> </span>
+                          </span>
+                          <span id="btnDelete" class="is-small bui-btn-img">
+                            <span class="btn-4img"> </span>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div id="treePlaylist"></div>
                   </div>
                 </div>
               </div>
               <div class="accordion-item mt-1">
                 <h2 class="accordion-header" id="headingTwo">
-                  <button
-                    class="accordion-button collapsed"
-                    aria-controls="collapseTwo"
-                    data-bs-target="#collapseTwo"
-                    data-bs-toggle="collapse"
-                    type="button"
-                    aria-expanded="false"
-                  >
-                    <strong class="xmp-text-color">在线媒体 </strong>
+                  <button class="accordion-button btn-list collapsed" data-bs-target="#collapseTwo" data-bs-toggle="collapse" type="button">
+                    <strong class="xmp-gray-text-color has-text-weight-semibold">在线媒体 </strong>
                   </button>
                 </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>This is the second </strong>
+                <div id="collapseTwo" class="accordion-collapse collapse show">
+                  <div class="accordion-body text-list-item p-2">
+                    <div id="treeMedia"></div>
+                    <div id="treeMedia2"></div>
                   </div>
                 </div>
               </div>
               <div class="accordion-item mt-1">
                 <h2 class="accordion-header" id="headingThree">
-                  <button
-                    class="accordion-button collapsed"
-                    aria-controls="collapseThree"
-                    data-bs-target="#collapseThree"
-                    data-bs-toggle="collapse"
-                    type="button"
-                    aria-expanded="false"
-                  >
-                    <strong class="xmp-text-color">娱乐中心 </strong>
+                  <button class="accordion-button btn-list collapsed" data-bs-target="#collapseThree" data-bs-toggle="collapse" type="button">
+                    <span class="xmp-gray-text-color has-text-weight-semibold">娱乐中心 </span>
                   </button>
                 </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>This is the second </strong>
+                <div id="collapseThree" class="accordion-collapse collapse show">
+                  <div class="accordion-body text-list-item p-2">
+                    <div id="treeLiveCenter"></div>
                   </div>
                 </div>
               </div>
@@ -118,14 +150,14 @@
           </div>
           <div class="column is-flex is-flex-direction-column">
             <div class="bkg-color-playlist" style="height: 30px">
-              <div class="field is-horizontal is-mobile mt-1">
+              <div class="field is-horizontal is-mobile">
                 <div class="field-body">
                   <div class="field">
-                    <input class="input bkg-color-input xmp-gray-text-color" style="height: 26px" type="text" placeholder="请输入播放地址" />
+                    <input class="input is-small bkg-color-input xmp-gray-text-color" type="text" placeholder="请输入播放地址" />
                   </div>
                 </div>
 
-                <span id="btn_refresh" class="is-small bui-no-background">
+                <span id="btn_refresh" class="is-small bui-btn-img">
                   <span class="btn-4img"> </span>
                 </span>
               </div>
@@ -135,10 +167,10 @@
               <div class="is-align-self-center center-bkg is-flex is-justify-content-center" style="width: 336px; height: 260px">
                 <div class="is-align-self-flex-end">
                   <div class="field has-addons">
-                    <button id="btn_open" class="bui-no-background">
+                    <button id="btn_open" class="bui-btn-img">
                       <span class="btn-4img"> </span>
                     </button>
-                    <button id="btn_open2" class="bui-no-background">
+                    <button id="btn_open2" class="bui-btn-img">
                       <span class="btn-4img"> </span>
                     </button>
                   </div>
@@ -146,52 +178,54 @@
               </div>
             </div>
 
-            <div class="bkg-color-playlist1" style="height: 48px">
+            <div style="height: 48px">
               <div class="level is-mobile">
                 <div class="level-left">
                   <div class="level-item">
-                    <span id="btnPlaylistShow" title="显示播放列表" class="is-small bui-no-background">
+                    <span id="btnPlaylistShow" title="显示播放列表" class="is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
-                    <span id="btnPlaylistHide" title="隐藏播放列表" class="is-small bui-no-background">
+                    <span id="btnPlaylistHide" title="隐藏播放列表" class="is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
                   </div>
                 </div>
 
                 <div class="level-item">
-                  <span id="btnStop" title="停止" class="is-small bui-no-background">
+                  <span id="btnStop" title="停止" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnPrevious" title="上一个" class="is-small bui-no-background">
+                  <span id="btnPrevious" title="上一个" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnPlay" title="播放" class="is-small bui-no-background">
+                  <span id="btnPlay" title="播放" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnPause" title="暂停" class="is-small bui-no-background">
+                  <span id="btnPause" title="暂停" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnNext" title="下一个" class="is-small bui-no-background">
+                  <span id="btnNext" title="下一个" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnVolume" title="静音" class="is-small bui-no-background">
+                  <span id="btnVolume" title="静音" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnVolumeZero" title="取消静音" class="is-small bui-no-background">
+                  <span id="btnVolumeZero" title="取消静音" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
+
+                  <input id="sliderRadius" type="range" style="width: 85px" min="0" max="100" value="50" />
                 </div>
 
                 <div class="level-right">
                   <div class="level-item">
-                    <span id="btnOpenMini" title="打开文件" class="is-small bui-no-background">
+                    <span id="btnOpenMini" title="打开文件" class="is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
-                    <span id="btnScreenFull" title="全屏" class="is-small bui-no-background">
+                    <span id="btnScreenFull" title="全屏" class="is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
-                    <span id="btnScreenNormal" title="退出全屏" class="is-small bui-no-background">
+                    <span id="btnScreenNormal" title="退出全屏" class="is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
                   </div>
@@ -217,6 +251,8 @@
     </div>
 
     <script src="thirdparty/bootstrap/js/bootstrap.min.js"></script>
+    <script src="thirdparty/bootstrap/extensions/bstreeview.js"></script>
+
     <script src="renderer.js"></script>
     <script src="titlebar.js"></script>
   </body>
