--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- 本项目js -->
   </head>
   <body class="bkg-color flex-column">
-    <div class="level is-mobile dragable1 titlebar-bkg mb-0">
+    <div class="hidden-when-fullscreen level is-mobile dragable titlebar-bkg mb-0">
       <div class="level-left ml-2">
         <img class="mr-1" height="24" width="24" src="assets/logo.png" />
         <div class="tabs-no-border no-dragable">
@@ -48,7 +48,7 @@
         <button class="bui-btn-min has-text-grey-light" title="最小化">
           <i class="fa-solid fa-minus"></i>
         </button>
-        <button class="bui-btn-restore" title="还原">
+        <button class="bui-btn-restore has-text-grey-light" title="还原">
           <i class="fa-regular fa-window-restore"></i>
         </button>
         <button class="bui-btn-max has-text-grey-light" title="最大化">
@@ -61,10 +61,10 @@
     </div>
 
     <div class="tab-contents height-remain flex-full">
-      <div class="tab-content is-block is-flex-grow-1 is-flex">
+      <div id="flexTab" class="tab-content is-block is-flex-grow-1 is-flex">
         <div class="columns is-gapless is-mobile is-flex-grow-1">
-          <div class="hidden-when-play column is-narrow bkg-color-playlist" style="width: 325px">
-            <div class="mr-1" style="height: 30px">
+          <div id="playlist" class="hidden-when-play column is-narrow bkg-color-playlist" style="width: 325px">
+            <div class="mr-1 ml-1" style="height: 30px">
               <div class="field is-horizontal is-mobile">
                 <span id="btnFont" class="is-small bui-btn-img">
                   <span class="btn-4img"> </span>
@@ -157,28 +157,32 @@
                   </div>
                 </div>
 
-                <span id="btn_refresh" class="is-small bui-btn-img">
+                <span id="btn_refresh" class="is-small bui-btn-img ml-1 mr-1">
                   <span class="btn-4img"> </span>
                 </span>
               </div>
             </div>
 
-            <div class="hidden-when-play is-flex-grow-1 is-flex is-justify-content-center">
+            <div class="hiddenImportant-when-play is-flex-grow-1 is-flex is-justify-content-center">
               <div class="is-align-self-center center-bkg is-flex is-justify-content-center" style="width: 336px; height: 260px">
                 <div class="is-align-self-flex-end">
                   <div class="field has-addons">
                     <button id="btn_open" class="bui-btn-img">
                       <span class="btn-4img"> </span>
                     </button>
-                    <button id="btn_open2" class="bui-btn-img">
+                    <label id="btn_open2" for="fileOpen" class="bui-btn-img">
                       <span class="btn-4img"> </span>
-                    </button>
+                    </label>
                   </div>
+
+                  <label class="file-label">
+                    <input id="fileOpen" class="file-input" type="file" accept=".mp4,.ogg,.webm" multiple />
+                  </label>
                 </div>
               </div>
             </div>
 
-            <div class="hidden show-when-play is-flex-grow-1 is-align-self-center mt-2 is-flex">
+            <div class="hiddenImportant showImportant-when-play is-flex-grow-1 is-align-self-center mt-2 is-flex">
               <div class="is-align-self-center pt-2">
                 <video id="video"></video>
                 <!-- <video id="video"  controls="true" src="_movie_test.mp4" height="300" autoplay="autoplay"></video> -->
@@ -187,54 +191,56 @@
               </div>
             </div>
 
-            <div id="playPanel" style="height: 60px" class="stickyRightBottom flex-column childToCenter">
-              <div class="level is-mobile is-align-self-stretch">
+            <div id="playPanel" style="height: 68px" class="stickyRightBottom flex-column childToCenter p-1">
+              <input id="sliderProgress" class="hiddenVisibility visible-when-play mb-1" type="range" style="width: 100%" min="0" max="1000" value="0" />
+
+              <div class="level is-mobile is-align-self-stretch" style="height: 50px">
                 <div class="level-left">
                   <div class="level-item">
-                    <span id="btnPlaylistShow" title="显示播放列表" class="is-small bui-btn-img">
+                    <span id="btnPlaylistShow" title="显示播放列表" class="hidden show-when-play is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
-                    <span id="btnPlaylistHide" title="隐藏播放列表" class="is-small bui-btn-img">
+                    <span id="btnPlaylistHide" title="隐藏播放列表" class="hidden-when-play is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
                   </div>
                 </div>
 
                 <div class="level-item ml-6">
-                  <span id="btnStop" title="停止" class="is-small bui-btn-img">
+                  <span id="btnStop" title="停止" class="hidden show-when-play is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
                   <span id="btnPrevious" title="上一个" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnPlay" title="播放" class="is-small bui-btn-img">
+                  <span id="btnPlay" title="播放" class="hidden-when-play is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnPause" title="暂停" class="is-small bui-btn-img">
+                  <span id="btnPause" title="暂停" class="hidden show-when-play is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
                   <span id="btnNext" title="下一个" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnVolume" title="静音" class="is-small bui-btn-img">
+                  <span id="btnVolumeZero" title="静音" class="is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
-                  <span id="btnVolumeZero" title="取消静音" class="is-small bui-btn-img">
+                  <span id="btnVolume" title="取消静音" class="hidden is-small bui-btn-img">
                     <span class="btn-4img"> </span>
                   </span>
 
-                  <input id="sliderRadius" type="range" style="width: 85px" min="0" max="100" value="50" />
+                  <input id="sliderVolume" type="range" class="mb-1" style="width: 85px" min="0" max="100" value="50" />
                 </div>
 
                 <div class="level-right">
                   <div class="level-item">
-                    <span id="btnOpenMini" title="打开文件" class="is-small bui-btn-img">
+                    <label id="btnOpenMini" for="fileOpen" title="打开文件" class="is-small bui-btn-img">
+                      <span class="btn-4img"> </span>
+                    </label>
+                    <span id="btnScreenFull" title="全屏" class="hidden is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
-                    <span id="btnScreenFull" title="全屏" class="is-small bui-btn-img">
-                      <span class="btn-4img"> </span>
-                    </span>
-                    <span id="btnScreenNormal" title="退出全屏" class="is-small bui-btn-img">
+                    <span id="btnScreenNormal" title="退出全屏" class="hidden is-small bui-btn-img">
                       <span class="btn-4img"> </span>
                     </span>
                   </div>
@@ -244,25 +250,34 @@
           </div>
         </div>
       </div>
+      <div class="tab-content is-flex-grow-1" title="很多视频网站禁止了electron访问，所以换成非视频网站">
+        <iframe src="https://blog.csdn.net/qq316293804/article/details/14162539" frameborder="0" style="width: 100%; height: 100%"></iframe>
+      </div>
+      <div class="tab-content is-flex-grow-1" title="迅雷的视频网站下线了，所以换成其他网站">
+        <iframe src="https://getbootstrap.com/docs/5.2/components/accordion/#example" frameborder="0" style="width: 100%; height: 100%"></iframe>
+      </div>
+      <div class="tab-content is-flex-grow-1" title="很多视频网站禁止了electron访问，所以换成非视频网站">
+        <iframe src="https://www.electronjs.org/zh/" frameborder="0" style="width: 100%; height: 100%"></iframe>
+      </div>
+      <div class="tab-content is-flex-grow-1" title="很多视频网站禁止了electron访问，所以换成非视频网站">
+        <iframe src="https://bulma.io/" frameborder="0" style="width: 100%; height: 100%"></iframe>
+      </div>
+    </div>
 
-      <div class="tab-content" title="迅雷的视频网站下线了，所以换成其他网站">
-        <!-- <iframe src="https://www.bilibili.com/" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
+    <div id="modalDialog" class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <div class="box">
+          <p class="modal-value">Modal text</p>
+        </div>
       </div>
-      <div class="tab-content" title="很多视频网站禁止了electron访问，所以换成非视频网站">
-        <!-- <iframe src="https://bulma.io/" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
-      </div>
-      <div class="tab-content" title="很多视频网站禁止了electron访问，所以换成非视频网站">
-        <!-- <iframe src="https://www.electronjs.org/zh/" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
-      </div>
-      <div class="tab-content" title="很多视频网站禁止了electron访问，所以换成非视频网站">
-        <!-- <iframe src="https://blog.csdn.net/qq316293804/article/details/14162539" frameborder="0" style="width: 100%; height: 100%"></iframe> -->
-      </div>
+      <button class="modal-close is-large"></button>
     </div>
 
     <script src="thirdparty/bootstrap/js/bootstrap.min.js"></script>
     <script src="thirdparty/bootstrap/extensions/bstreeview.js"></script>
 
-    <script src="renderer.js"></script>
     <script src="titlebar.js"></script>
+    <script src="renderer.js"></script>
   </body>
 </html>
